# snow_day

./: .env.example  .gitignore  Dockerfile  Dockerfile.ollama  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
config/: snow_day.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
infra/ollama/: Dockerfile  README.md  startup.sh
snow_day/: __init__.py  api.py  cache.py  config.py  http_client.py  logging.py  models.py  normalization.py  resorts.py  scheduler.py  storage.py
snow_day/config/: defaults.yaml
snow_day/scrapers/: __init__.py  alpine_peak.py  base.py  bolton_valley.py  cannon_mountain.py  jay_peak.py  killington.py  loon_mountain.py  okemo.py  pats_peak.py  pico.py  ragged_mountain.py  saddleback.py  stratton.py  sugarbush.py  sugarloaf.py  summit_valley.py  sunday_river.py  waterville_valley.py
snow_day/services/: __init__.py  llm_client.py  scoring.py  weather.py
tests/: test_fetch_conditions.py  test_normalization.py  test_scoring.py  test_storage.py
tests/fixtures/: alpine_peak.html  summit_valley.html
