[project]
name = "snow-day"
version = "0.1.0"
description = "Snow resort condition scrapers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "structlog>=24.2.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snow_day*"]
exclude = ["tests", "frontend*"]
